refactor: Simplify profile selection process in OAuthHandler
- Removed the user data directory retrieval in main.py for cleaner profile selection.
- Updated profile selection logic to include an exit option in oauth_auth.py.
- Enhanced user prompts in multiple languages to improve user experience during profile selection.

--- a/locales/en.json
+++ b/locales/en.json
@@ -28,7 +28,8 @@
         "config": "Show Config",
         "delete_google_account": "Delete Cursor Google Account",
         "continue_prompt": "Continue? (y/N): ",
-        "operation_cancelled_by_user": "Operation cancelled by user"
+        "operation_cancelled_by_user": "Operation cancelled by user",
+        "exiting": "Exiting ……"
     },
     "languages": {
         "en": "English",
