feat: Enhance force update configuration with new options and multilingual support
- Added 'enabled_force_update' option in the [Utils] section of the configuration.
- Updated the force_update_config() function to utilize the new option for determining update behavior.
- Improved user feedback messages for force update status in English, Simplified Chinese, and Traditional Chinese locale files.
- Ensured consistent messaging for enabling and disabling force updates.

--- a/locales/en.json
+++ b/locales/en.json
@@ -560,7 +560,9 @@
         "backup_created": "Backup created: {path}",
         "config_removed": "Config file removed for forced update",
         "backup_failed": "Failed to backup config: {error}",
-        "force_update_failed": "Force update config failed: {error}"
+        "force_update_failed": "Force update config failed: {error}",
+        "config_force_update_disabled": "Config file force update disabled , skipping forced update",
+        "config_force_update_enabled": "Config file force update enabled , performing forced update"
     },
     "oauth": {
         "authentication_button_not_found": "Authentication button not found",
