Add bypass token limit functionality
- Introduced a new script `bypass_token_limit.py` to modify the `workbench.desktop.main.js` file, allowing users to bypass token limits.
- Updated localization files to include new strings for the bypass token limit feature in English, Simplified Chinese, and Traditional Chinese.
- Enhanced CHANGELOG.md to reflect the addition of the bypass token limit feature and related fixes.

--- a/locales/en.json
+++ b/locales/en.json
@@ -31,7 +31,8 @@
         "operation_cancelled_by_user": "Operation cancelled by user",
         "exiting": "Exiting ……",
         "bypass_version_check": "Bypass Cursor Version Check",
-        "check_user_authorized": "Check User Authorized"
+        "check_user_authorized": "Check User Authorized",
+        "bypass_token_limit": "Bypass Token Limit"
     },
     "languages": {
         "en": "English",
@@ -727,5 +728,10 @@
         "checking_usage_information": "Checking usage information...",
         "check_usage_response": "Check usage response: {response}",
         "usage_response": "Usage response: {response}"
+    },
+    "bypass_token_limit": {
+        "title": "Bypass Token Limit Tool",
+        "description": "This tool modifies the workbench.desktop.main.js file to bypass the token limit",
+        "press_enter": "Press Enter to continue..."
     }
 }   
