Enhance browser configuration and path retrieval
- Updated `config.py` to include a comprehensive browser configuration section, allowing for dynamic retrieval of browser paths and drivers for Chrome, Edge, Firefox, and Brave.
- Refactored `new_signup.py`, `new_tempemail.py`, and `oauth_auth.py` to utilize the new browser configuration, improving flexibility and maintainability.
- Removed deprecated `get_default_chrome_path` function and replaced it with a more generalized `get_default_browser_path` function in `utils.py`.
- Updated localization files to include new strings related to browser path validation and selection.

--- a/locales/en.json
+++ b/locales/en.json
@@ -199,7 +199,15 @@
         "setting_on_password": "Setting Password",
         "getting_code": "Getting Verification Code, Will Try in 60s",
         "human_verify_error": "Can't verify the user is human. Retrying...",
-        "max_retries_reached": "Maximum retry attempts reached. Registration failed."
+        "max_retries_reached": "Maximum retry attempts reached. Registration failed.",
+        "browser_path_invalid": "{browser} path is invalid, using default path",
+        "using_browser": "Using {browser} browser: {path}",
+        "using_browser_profile": "Using {browser} profile from: {user_data_dir}",
+        "make_sure_browser_is_properly_installed": "Make sure {browser} is properly installed",
+        "try_install_browser": "Try installing the browser with your package manager",
+        "tracking_processes": "Tracking {count} {browser} processes",
+        "no_new_processes_detected": "No new {browser} processes detected to track",
+        "could_not_track_processes": "Could not track {browser} processes: {error}"
     },
     "auth": {
         "title": "Cursor Auth Manager",
@@ -623,19 +631,26 @@
         "warning_could_not_kill_existing_browser_processes": "Warning: Could not kill existing browser processes: {error}",
         "browser_failed_to_start": "Browser failed to start: {error}",
         "browser_failed": "Browser failed to start: {error}",
-        "browser_failed_to_start_fallback": "Browser failed to start: {error}"
+        "browser_failed_to_start_fallback": "Browser failed to start: {error}",
+        "user_data_dir_not_found": "{browser} user data directory not found at {path}, will try Chrome instead",
+        "error_getting_user_data_directory": "Error getting user data directory: {error}",
+        "warning_browser_close": "Warning: This will close all running {browser} processes",
+        "killing_browser_processes": "Killing {browser} processes...",
+        "profile_selection_error": "Error during profile selection: {error}",
+        "using_configured_browser_path": "Using configured {browser} path: {path}",
+        "browser_not_found_trying_chrome": "Could not find {browser}, trying Chrome instead",
+        "found_chrome_at": "Found Chrome at: {path}"
     },
-    "chrome_profile": {
-        "title": "Chrome Profile Selection",
-        "select_profile": "Select a Chrome profile to use:",
-        "profile_list": "Available profiles:",
-        "default_profile": "Default Profile",
+    "browser_profile": {
+        "title": "Browser Profile Selection",
+        "select_profile": "Select {browser} profile to use:",
+        "profile_list": "Available {browser} profiles:",
+        "default_profile": "Default profile",
         "profile": "Profile {number}",
-        "no_profiles": "No Chrome profiles found",
-        "error_loading": "Error loading Chrome profiles: {error}",
+        "no_profiles": "No {browser} profiles found",
+        "error_loading": "Error loading {browser} profiles: {error}",
         "profile_selected": "Selected profile: {profile}",
-        "invalid_selection": "Invalid selection. Please try again",
-        "warning_chrome_close": "Warning: This will close all running Chrome processes"
+        "invalid_selection": "Invalid selection. Please try again."
     },
     "account_delete": {
         "title": "Cursor Google Account Deletion Tool",
