Enhance OAuth and browser configuration
- Updated `config.py` to include paths for Opera browser and added new OAuth settings for alert display and timeout configurations.
- Modified `oauth_auth.py` to improve error handling and user data directory retrieval for Opera, along with conditional alert display based on configuration.
- Enhanced `utils.py` to support multiple Opera installation paths for better browser detection.
- Updated localization files to include new strings for user data directory messages.

--- a/locales/en.json
+++ b/locales/en.json
@@ -639,7 +639,8 @@
         "profile_selection_error": "Error during profile selection: {error}",
         "using_configured_browser_path": "Using configured {browser} path: {path}",
         "browser_not_found_trying_chrome": "Could not find {browser}, trying Chrome instead",
-        "found_chrome_at": "Found Chrome at: {path}"
+        "found_chrome_at": "Found Chrome at: {path}",
+        "found_browser_user_data_dir": "Found {browser} user data directory: {path}"
     },
     "browser_profile": {
         "title": "Browser Profile Selection",
