Update CHANGELOG.md for version 1.9.02 and enhance config handling
- Added entries for version 1.9.02 in CHANGELOG.md, detailing fixes for configuration file path, Windows user permissions, and other issues.
- Improved `config.py` to handle document path retrieval more robustly, including fallback to a temporary directory if the documents path is not found.
- Updated localization files to include new strings for configuration messages in both English and Chinese.

--- a/locales/en.json
+++ b/locales/en.json
@@ -572,7 +572,10 @@
         "backup_failed": "Failed to backup config: {error}",
         "force_update_failed": "Force update config failed: {error}",
         "config_force_update_disabled": "Config file force update disabled , skipping forced update",
-        "config_force_update_enabled": "Config file force update enabled , performing forced update"
+        "config_force_update_enabled": "Config file force update enabled , performing forced update",
+        "documents_path_not_found": "Documents path not found, using current directory",
+        "config_dir_created": "Config directory created: {path}",
+        "using_temp_dir": "Using temporary directory due to error: {path} (Error: {error})"
     },
     "oauth": {
         "authentication_button_not_found": "Authentication button not found",
